--- a/td.html
+++ b/td.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Les Humanités numériques à Ausonius</title>
+    <title>Page de présentation mémoire</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <img src="images/logo-ausonius.jpg" alt="Logo d'Ausonius" width="200px"/>
-    <h1> Les Humanités Numériques à Ausonius </h1>
-    <p>AusoHNum est le pôle d'Humanités numériques d'Ausonius.</p>
-    <p>Le pôle des humanités numériques est impliqué dans tous les programmes du laboratoire Ausonius, à chacune des étapes de la recherche :</p>
+    <h1> Leo Cerqueira, en quête de savoir </h1>
+    <p>Cette page web consiste à être un hub de mes recherches et de partager mon avancée. Elle a pour mission de :</p>
 <ul>
-  <li>Acquisition des données</li>
-  <li>Traitement des données</li>
-  <li>Analyse de données</li>
+  <li>Publier l'avancement du mémoire par chapitre</li>
+  <li>Metter à disposition la base de données</li>
+  <li>Réaliser une médiathèque sur les objets culturelles étudiés</li>
+  <li>Réaliser une bibliothèque des oeuvres libres de droit utilisées dans le mémoire.</li>
 </ul>
 
-<p> mais aussi la diffusion web des données enrichies de la recherche ( indexation et exposition normées, valorisation et pérennisation des contenus).</p>
+<p>Cette page web a été possible par le cours d'Humanités Numériques de l'Université Bordeaux Montaigne, notamment par le TD Création d'une page web</p>
+<a href="https://ausonius.huma-num.fr/HCP-DH/page-web/">Création d'une page web</a>
   </body>
-<a>Laboratoire Ausonius</a>
-<a href="https://ausonius.u-bordeaux-montaigne.fr">Laboratoire Ausonius</a>
-</html>	
+</html>	  
