--- a/td.html
+++ b/td.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Page de présentation mémoire</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1> Leo Cerqueira, en quête de savoir </h1>
